2008-05-03  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab.c:
	* src/baobab-scan.c:
	* src/baobab-utils.c:
	Some leak fixes and cleanups by Cosimo Cecchi.

2008-05-02  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-scan.c: pass in the GFileInfo to the recursive loop
	to avoid to call stat() again on each file.

2008-05-02  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab.c:
	Ref the location before rescanning otherwise the current location
	gets finalized. Also make sure the Rescan button is insensitive when
	there is no current location. 

2008-05-02  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-scan.c:
	* src/baobab-scan.h:
	* src/baobab.c:
	Rename getDir to baobab_scan_execute and make it take a GFile.

2008-05-02  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-scan.c: 
	Main scanning module migrated to Gio
	Based on a patch by Patrick Hulin, bug #511148.

2008-05-02  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab.c:
	* src/baobab.h:
	* src/callbacks.c:
	Make the cursor busy in the set_busy function.

2008-05-02  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-graphwin.c: polished
	* src/baobab-prefs.c: completed Gio Migration

2008-05-01  Fabio Marzocca  <thesaltydog@gmail.com>

	* data/baobab.schemas.in:
	* src/baobab-prefs.c: 
	* src/baobab-prefs.h:
	* src/baobab-utils.c: 
	* src/baobab.h:
	
	The gconf key <noscan> is now deprecated. 
	The new key <skip_scan_uri_list> took over.
	baobab.excluded_dirs GSList of paths is now replaced 
	by baobab.excluded_location as a GSList of GFile*.

2008-05-01  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-utils.c:
	* src/baobab-treeview.c:
	* src/callbacks.c:
	Factor out a can_trash_file util and use the proper display name
	when showing an error about failed trashing of a file.

2008-05-01  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-utils.c:
	* src/baobab.c:
	* src/baobab.h:
	* src/callbacks.c: